students/tbrown43/tbrown43.Lab00.compile.out
compiling files:
./helloWorld.cpp

g++ -std=c++14 -Wall -g -o"run_me" *.cpp
helloWorld.cpp:1:10: error: #include expects "FILENAME" or <FILENAME>
 #include iostream
          ^
helloWorld.cpp: In function ‘int main()’:
helloWorld.cpp:5:5: error: ‘cout’ was not declared in this scope
     cout << "Hello world!";
     ^
Compilation Failed 0
